--- a/cpp06/ex02/Makefile
+++ b/cpp06/ex02/Makefile
@@ -1,9 +1,9 @@
-NAME = identify
+NAME = main
 
 CPP = c++
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRCS = main.cpp identify.cpp
+SRCS = main.cpp Base.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 all: $(NAME)
